2009-11-22 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-10.
    * NAMESPACE: export logit

2009-4-29 Yu-Sung Su     <ys463@columbia.edu>  
    * R/display: fix format inconsistency in sprintf (fround)

2009-4-13 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-9.
    * R/macthing: fix a bug in matching replace=TRUE


2009-3-31 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-8.
    * R/display: add option detail


2009-3-1 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-7.
    * R/display: fix a bug in display.mer


2009-2-26 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-6.
    * R/display: print out t-value, z-value, p-value

2009-2-20 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-5.
    * R/load.first: no longer set default digit=2

2009-2-17 Yu-Sung Su     <ys463@columbia.edu>  
    * NAMESPACE: export binned.resids


2009-2-4 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-4, no longer need car
    * R/load.first: car is no longer required

2009-2-1 Yu-Sung Su     <ys463@columbia.edu>  
    * man/coefplot: fixed doc error
    * man/sim: fixed doc error


2009-1-30 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-3.
    * R/coefplot: fixed margin bugs in coefplot.default

2009-1-29 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-2.
    * R/sim: for mer method, add option ranef. Users choose to return 
      sim.ranef or not.

2009-1-28 Yu-Sung Su     <ys463@columbia.edu>  
    * man: first attempt to clean up help files to comply the new rule.
            in particular, use \dQuote and \sQuote for "" and ''.
    * man/bayesglm: update reference
    * man/bayespolr: update reference

2009-1-22 Yu-Sung Su     <ys463@columbia.edu>  
    * man/rescale: update reference.